login fixed overflowing the drop down menu

--- a/static/css/login.css
+++ b/static/css/login.css
@@ -14,7 +14,7 @@ body{
     position: relative;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, 35%);
+    transform: translate(-50%, 40%);
     width: 25rem;
     background: white;
     border-radius: 6px;
